overflow hidden solved

--- a/src/main/webapp/homepage/style.css
+++ b/src/main/webapp/homepage/style.css
@@ -1,19 +1,17 @@
 /* homepage/style.css */
 
+
 body, html {
     margin: 0;
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
 }
 
 #frontPage {
     position: relative;
     width: 100%;
     height: 100vh;
-    overflow: hidden;
 }
 
 #mainVideo {
